reorganize dependencies and scripts

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "postcss": "postcss ./src/css/style.css --output ./dist/css/style.css"
+    "css:build": "postcss ./src/css/style.css --no-map --output ./dist/css/style.css",
+    "css:watch": "postcss ./src/css/style.css --map --watch --output ./dist/css/style.css"
   },
   "repository": {
     "type": "git",
@@ -18,6 +19,7 @@
   },
   "homepage": "https://github.com/jdelarubia/rollup-postcss-scaffold#readme",
   "devDependencies": {
+    "autoprefixer": "^10.4.1",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "postcss-nesting": "^10.1.1"
