--- a/package.json
+++ b/package.json
@@ -4,8 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "css:build": "postcss ./src/css/style.css --no-map --output ./dist/css/style.css",
-    "css:watch": "postcss ./src/css/style.css --map --watch --output ./dist/css/style.css"
+    "WATCH": "npm-run-all --parallel watch:css",
+    "build:css": "postcss ./src/css/style.css --no-map --output ./dist/css/style.css",
+    "watch:css": "postcss ./src/css/style.css --map --watch --output ./dist/css/style.css"
   },
   "repository": {
     "type": "git",
@@ -20,6 +21,7 @@
   "homepage": "https://github.com/jdelarubia/rollup-postcss-scaffold#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.1",
+    "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
     "postcss-nesting": "^10.1.1"
