--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "SERVE": "live-server --open=./dist --port=8000",
     "WATCH": "npm-run-all --parallel watch:css",
     "build:css": "postcss ./src/css/style.css --no-map --output ./dist/css/style.css",
     "watch:css": "postcss ./src/css/style.css --map --watch --output ./dist/css/style.css"
@@ -21,9 +22,11 @@
   "homepage": "https://github.com/jdelarubia/rollup-postcss-scaffold#readme",
   "devDependencies": {
     "autoprefixer": "^10.4.1",
+    "live-server": "^1.2.1",
     "npm-run-all": "^4.1.5",
     "postcss": "^8.4.5",
     "postcss-cli": "^9.1.0",
-    "postcss-nesting": "^10.1.1"
+    "postcss-nesting": "^10.1.1",
+    "postcss-purgecss": "^2.0.3"
   }
 }
