--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "postcss-cli": "^9.1.0",
     "postcss-import": "^14.0.2",
     "postcss-nesting": "^10.1.1",
+    "postcss-purgecss": "^2.0.3",
     "rollup": "^2.67.2"
   }
 }
